--- a/src/view/ControlUIsGroup.mxml
+++ b/src/view/ControlUIsGroup.mxml
@@ -2,29 +2,28 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		  xmlns:s="library://ns.adobe.com/flex/spark" 
 		  xmlns:mx="library://ns.adobe.com/flex/mx" 
-		  width="310"
 		  addedToStage="addedToStageHandler(event)"
 		  >
 	
 	<fx:Script>
 		<![CDATA[
-			
 			import message.Message;
 			import message.MessageDispatcher;
 			
 			import model.ImportDataProxy;
 			
-			private var importDataProxy:ImportDataProxy = ImportDataProxy.getInstance();
+			private var _importDataProxy:ImportDataProxy = ImportDataProxy.getInstance();
 			
 			[Bindable]
-			private var movementName:String = "";
+			private var _movementName:String = "";
 			
 			[Bindable]
-			private var movementBoneName:String = "";
+			private var _movementBoneName:String = "";
 			
-			private var movementUpdated:Boolean;
+			private var _movementUpdated:Boolean;
 			
-			private function addedToStageHandler(event:Event):void{
+			private function addedToStageHandler(event:Event):void
+			{
 				
 				updatePlayAndPauseBtn();
 				
@@ -35,7 +34,6 @@
 				numDurationTween.addEventListener(Event.CHANGE, valueChangeHandler);
 				
 				sliderTweenEasing.addEventListener(Event.CHANGE, valueChangeHandler);
-				//numKeyFrameEase.addEventListener(Event.CHANGE, valueChangeHandler);
 				
 				btnPlay.addEventListener(MouseEvent.CLICK, valueChangeHandler);
 				checkLoop.addEventListener(Event.CHANGE, valueChangeHandler);
@@ -46,6 +44,7 @@
 				sliderDelay.addEventListener(Event.CHANGE, valueChangeHandler);
 				numDelay.addEventListener(Event.CHANGE, valueChangeHandler);
 				
+				//MessageDispatcher.addEventListener(MessageDispatcher.LANGUAGE_CHANGE, commandHandler);
 				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_MOVEMENT_DATA, commandHandler);
 				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_MOVEMENT_BONE_DATA, commandHandler);
 				
@@ -59,153 +58,172 @@
 				
 			}
 			
-			private function commandHandler(_e:Message):void{
-				switch(_e.type){
+			private function commandHandler(e:Message):void
+			{
+				switch(e.type)
+				{
+					//case MessageDispatcher.LANGUAGE_CHANGE:
+						//updatePlayAndPauseBtn();
+						//break;
 					case MessageDispatcher.CHANGE_MOVEMENT_DATA:
-						movementName = _e.parameters[0];
-						var _durationTo:int = importDataProxy.animationDataProxy.durationTo;
-						var _durationTween:int = importDataProxy.animationDataProxy.durationTween;
-						if(_durationTo < 0){
+						_movementName = e.parameters[0];
+						var durationTo:int = _importDataProxy.animationDataProxy.durationTo;
+						var durationTween:int = _importDataProxy.animationDataProxy.durationTween;
+						if(durationTo < 0)
+						{
 							numDurationTo.enabled = false;
 							sliderDurationTo.enabled = false;
-						}else{
-							numDurationTo.value = _durationTo;
+						}
+						else
+						{
+							numDurationTo.value = durationTo;
 							numDurationTo.enabled = true;
-							sliderDurationTo.value = _durationTo;
+							sliderDurationTo.value = durationTo;
 							sliderDurationTo.enabled = true;
 						}
-						if(_durationTween < 0){
+						if(durationTween < 0)
+						{
 							numDurationTween.enabled = false;
 							sliderDurationTween.enabled = false;
 							checkLoop.selected = false;
 							checkLoop.enabled = false;
 							sliderTweenEasing.enabled = false;
-							//numKeyFrameEase.enabled = false;
-						}else{
-							numDurationTween.value = _durationTween;
+						}
+						else
+						{
+							numDurationTween.value = durationTween;
 							numDurationTween.enabled = true;
-							sliderDurationTween.value = _durationTween;
+							sliderDurationTween.value = durationTween;
 							sliderDurationTween.enabled = true;
-							checkLoop.selected = importDataProxy.animationDataProxy.loop;
+							checkLoop.selected = _importDataProxy.animationDataProxy.loop;
 							checkLoop.enabled = true;
-							//numKeyFrameEase.value = 
-							sliderTweenEasing.value = importDataProxy.animationDataProxy.tweenEasing;
+							sliderTweenEasing.value = _importDataProxy.animationDataProxy.tweenEasing;
 							sliderTweenEasing.enabled = true;
-							//numKeyFrameEase.enabled = true;
 						}
 						break;
 					case MessageDispatcher.CHANGE_MOVEMENT_BONE_DATA:
-						movementBoneName = _e.parameters[0];
-						var _boneScale:Number = importDataProxy.animationDataProxy.boneScale;
-						var _boneDelay:Number = importDataProxy.animationDataProxy.boneDelay;
+						_movementBoneName = e.parameters[0];
+						var boneScale:Number = _importDataProxy.animationDataProxy.boneScale;
+						var boneDelay:Number = _importDataProxy.animationDataProxy.boneDelay;
 						
-						if(isNaN(_boneScale)){
+						if(isNaN(boneScale))
+						{
 							numScale.enabled = false;
 							sliderScale.enabled = false;
-						}else{
+						}
+						else
+						{
 							numScale.enabled = true;
 							sliderScale.enabled = true;
-							numScale.value = _boneScale;
-							sliderScale.value = _boneScale;
+							numScale.value = boneScale;
+							sliderScale.value = boneScale;
 						}
 						
-						if(isNaN(_boneDelay)){
+						if(isNaN(boneDelay))
+						{
 							numDelay.enabled = false;
 							sliderDelay.enabled = false;
-						}else{
+						}
+						else
+						{
 							numDelay.enabled = true;
 							sliderDelay.enabled = true;
-							numDelay.value = _boneDelay;
-							sliderDelay.value = _boneDelay;
+							numDelay.value = boneDelay;
+							sliderDelay.value = boneDelay;
 						}
-						
 						break;
 					case MessageDispatcher.MOVEMENT_CHANGE:
-						updatePlayAndPauseBtn();
-						break;
 					case MessageDispatcher.MOVEMENT_START:
-						break;
 					case MessageDispatcher.MOVEMENT_COMPLETE:
 						updatePlayAndPauseBtn();
 						break;
 					case MessageDispatcher.UPDATE_MOVEMENT_DATA:
 					case MessageDispatcher.UPDATE_MOVEMENT_BONE_DATA:
 					case MessageDispatcher.UPDATE_BONE_PARENT:
-						movementUpdated = !importDataProxy.armature.animation.isPlaying;
+						_movementUpdated = !_importDataProxy.armature.animation.isPlaying;
 						break;
 				}
 			}
 			
-			private function valueChangeHandler(_e:Event):void{
-				switch(_e.target){
+			private function valueChangeHandler(e:Event):void
+			{
+				switch(e.target){
 					case sliderDurationTo:
 						numDurationTo.value = sliderDurationTo.value;
 					case numDurationTo:
 						sliderDurationTo.value = numDurationTo.value;
-						importDataProxy.animationDataProxy.durationTo = numDurationTo.value;
+						_importDataProxy.animationDataProxy.durationTo = numDurationTo.value;
 						break;
 					case sliderDurationTween:
 						numDurationTween.value = sliderDurationTween.value;
 					case numDurationTween:
 						sliderDurationTween.value = numDurationTween.value;
-						importDataProxy.animationDataProxy.durationTween = numDurationTween.value;
+						_importDataProxy.animationDataProxy.durationTween = numDurationTween.value;
 						break;
-					//case numKeyFrameEase:
-						//sliderDurationTo.value = numDurationTo.value;
 					case sliderTweenEasing:
-						if(sliderDurationTo.value < -1){
-							//trace(1);
-							//numKeyFrameEase.textDisplay.text = "NaN";
-						}else{
-							//numKeyFrameEase.value = sliderDurationTo.value;
-						}
-						importDataProxy.animationDataProxy.tweenEasing = sliderTweenEasing.value;
+						_importDataProxy.animationDataProxy.tweenEasing = sliderTweenEasing.value;
 						break;
 					case btnPlay:
-						if(importDataProxy.armature){
-							if(!btnPlay.selected){
-								importDataProxy.armature.animation.stop();
-							}else{
-								if(movementUpdated){
-									importDataProxy.armature.animation.gotoAndPlay(importDataProxy.animationDataProxy.movementName);
-								}else{
-									importDataProxy.armature.animation.play();
+						if(_importDataProxy.armature)
+						{
+							if(!btnPlay.selected)
+							{
+								_importDataProxy.armature.animation.stop();
+							}
+							else
+							{
+								if(_movementUpdated)
+								{
+									_importDataProxy.armature.animation.gotoAndPlay(_importDataProxy.animationDataProxy.movementName);
+								}
+								else
+								{
+									_importDataProxy.armature.animation.play();
 								}
 							}
 							updatePlayAndPauseBtn();
-							movementUpdated = false;
+							_movementUpdated = false;
 						}
 						break;
 					case checkLoop:
-						importDataProxy.animationDataProxy.loop = checkLoop.selected;
+						_importDataProxy.animationDataProxy.loop = checkLoop.selected;
 						break;
 					case sliderScale:
 						numScale.value = sliderScale.value;
 					case numScale:
-						importDataProxy.animationDataProxy.boneScale = sliderScale.value = isNaN(numScale.value)?0:numScale.value;
+						_importDataProxy.animationDataProxy.boneScale = sliderScale.value = isNaN(numScale.value)?0:numScale.value;
 						break;
 					case sliderDelay:
 						numDelay.value = sliderDelay.value;
 					case numDelay:
-						importDataProxy.animationDataProxy.boneDelay = sliderDelay.value = isNaN(numDelay.value)?0:numDelay.value;
+						_importDataProxy.animationDataProxy.boneDelay = sliderDelay.value = isNaN(numDelay.value)?0:numDelay.value;
 						break;
 				}
 			}
 			
-			private function updatePlayAndPauseBtn():void{
-				if(importDataProxy.armature){
+			private function updatePlayAndPauseBtn():void
+			{
+				if(_importDataProxy.armature)
+				{
 					btnPlay.enabled = true;
-					if(importDataProxy.armature.animation.isPause){
+					if(_importDataProxy.armature.animation.isPause)
+					{
 						btnPlay.label = resourceManager.getString('resources','play');
 						btnPlay.selected = false;
-					}else if(importDataProxy.armature.animation.isComplete){
+					}
+					else if(_importDataProxy.armature.animation.isComplete)
+					{
 						btnPlay.label = resourceManager.getString('resources','play');
 						btnPlay.selected = false;
-					}else{
+					}
+					else
+					{
 						btnPlay.label = resourceManager.getString('resources','stop');
 						btnPlay.selected = true;
 					}
-				}else{
+				}
+				else
+				{
 					btnPlay.selected = false;
 					btnPlay.enabled = false;
 					btnPlay.label = resourceManager.getString('resources','play');
@@ -213,67 +231,81 @@
 			}
 		]]>
 	</fx:Script>
-	<s:VGroup width="100%" height="100%" gap="2">
-		<mx:Accordion width="100%" height="155">
-			<s:NavigatorContent width="100%" height="100%" label="{resourceManager.getString('resources','behaviorPanelTitle') + movementName}">
-				<s:Label x="10" y="10" width="110" height="24" textAlign="right" verticalAlign="middle"
+	<s:Rect width="100%" height="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="0x000000" weight="1"/>
+		</s:stroke>
+	</s:Rect>
+	<s:VGroup gap="2" horizontalAlign="right">
+		<s:Button width="100%" height="24" cornerRadius="0"
+				  label="{resourceManager.getString('resources','behaviorPanelTitle') + _movementName}"
+				  />
+		<s:HGroup paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10">
+			<s:VGroup minWidth="100" gap="6" horizontalAlign="right">
+				<s:Label height="24" textAlign="right" verticalAlign="middle"
 						 text="{resourceManager.getString('resources','totalFrames')}"
 						 />
 				
-				<s:Label x="10" y="40" width="110" height="24"  textAlign="right" verticalAlign="middle"
+				<s:Label height="24" textAlign="right" verticalAlign="middle"
 						 text="{resourceManager.getString('resources','switchTweenFrames')}"
 						 />
-
-				<s:Label x="10" y="70" width="110" height="24"  textAlign="right" verticalAlign="middle"
+				
+				<s:Label height="24" textAlign="right" verticalAlign="middle"
 						 text="{resourceManager.getString('resources','keyFrameEase')}"
 						 />
 				
-				
-				<s:HSlider id="sliderDurationTween" x="130" y="17" width="100"
+				<s:ToggleButton id="btnPlay" width="70" height="24"
+								/>
+			</s:VGroup>
+			
+			<s:Group>
+				<s:HSlider id="sliderDurationTween" y="7" width="100"
 						   minimum="0" maximum="100" snapInterval="1"
 						   />
-				<s:HSlider id="sliderDurationTo" x="130" y="47" width="100" 
+				<s:HSlider id="sliderDurationTo" y="37" width="100" 
 						   minimum="0" maximum="100" snapInterval="1"
 						   />
-				<s:CheckBox id="checkLoop" x="130" y="100" width="100" height="24" 
-							label="{resourceManager.getString('resources','loop')}"
-							/>
-				<s:HSlider id="sliderTweenEasing" x="130" y="77" width="100"
+				<s:HSlider id="sliderTweenEasing" y="67" width="100"
 						   minimum="-1.1" maximum="2" snapInterval="0.05"
 						   />
-				<s:ToggleButton id="btnPlay" x="48" y="100" width="70" height="24"
-						  />
+				<s:CheckBox id="checkLoop" x="0" y="90" width="100" height="24"
+							label="{resourceManager.getString('resources','loop')}"/>
 				
-				<s:NumericStepper id="numDurationTween" x="240" y="10" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numDurationTween" x="110" y="0" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="3000" minimum="0" snapInterval="1"
 								  />
 				
-				<s:NumericStepper id="numDurationTo" x="240" y="40" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numDurationTo" x="110" y="30" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="3000" minimum="0" snapInterval="1"
 								  />
-			</s:NavigatorContent>
-		</mx:Accordion>
-		<mx:Accordion width="100%" height="100%">
-			<s:NavigatorContent width="100%" height="100%" label="{resourceManager.getString('resources','bonePanelTitle') + movementBoneName}">
-				<s:Label x="10" y="10" width="110" height="24" textAlign="right" verticalAlign="middle"
+			</s:Group>
+		</s:HGroup>
+		<s:Button width="100%" height="24" cornerRadius="0"
+				  label="{resourceManager.getString('resources','bonePanelTitle') + _movementBoneName}"
+				  />
+		<s:HGroup paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10">
+			<s:VGroup minWidth="100" gap="6" horizontalAlign="right">
+				<s:Label height="24" textAlign="right" verticalAlign="middle"
 						 text="{resourceManager.getString('resources','totalFramesScale')}"
 						 />
-				<s:Label x="10" y="40" width="110" height="24" textAlign="right" verticalAlign="middle"
+				<s:Label height="24" textAlign="right" verticalAlign="middle"
 						 text="{resourceManager.getString('resources','playDelay')}"
 						 />
-				<s:HSlider id="sliderScale" x="130" y="17" width="100"
+			</s:VGroup>
+			<s:Group>
+				<s:HSlider id="sliderScale" y="7" width="100"
 						   minimum="0" maximum="200" snapInterval="5"
 						   />
-				<s:HSlider id="sliderDelay" x="130" y="47" width="100"
+				<s:HSlider id="sliderDelay" y="37" width="100"
 						   minimum="-100" maximum="100" snapInterval="5"
 						   />
-				<s:NumericStepper id="numScale" x="240" y="10" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numScale" x="110" y="0" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="1000" minimum="0" snapInterval="1"
 								  />
-				<s:NumericStepper id="numDelay" x="240" y="40" width="60" height="24" cornerRadius="0" textAlign="right"
+				<s:NumericStepper id="numDelay" x="110" y="30" width="60" height="24" cornerRadius="0" textAlign="right"
 								  maximum="100" minimum="-100" snapInterval="1"
 								  />
-			</s:NavigatorContent>
-		</mx:Accordion>
+			</s:Group>
+		</s:HGroup>
 	</s:VGroup>
 </s:Group>
